update new dataset & model

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Code/main/nltk_data/
 Code/main/legal-ner-model/
 Code/main/logs/
 Code/main/models/
+Code/main/results/
 
 Datasets/PDF/
 Datasets/TXT/
